src/components/blocks/search-result/_search-result.scss
.b-search-result {
  background-color: siteColor(vam-white);
  border-bottom: 1px solid siteColor(vam-grey-5);
  display: block;
  position: relative;
  width: 100%;

  &__content {
    padding: 16px 0;
    &-text {
      margin: auto;
    }

    &-type {
      @include typeSetting(1);
      color: siteColor(vam-grey-2);
      margin-bottom: 4px;

      @include bpMinXSmall {
        margin-bottom: 0;
        padding-left: 120px;
      }
    }

    &-title {
      @include typeSetting(3, bold);
      color: siteColor(vam-black);
      margin-bottom: 12px;
      overflow: hidden;
      text-overflow: clip;
      white-space: normal;
      
      @include bpMinXSmall {
        @include typeSetting(4, bold);
        margin-bottom: 4px;
        padding-left: 120px;
        text-overflow: ellipsis;
        white-space: nowrap;
      }
    }

    &-description {
      @include typeSetting(2, light);
      color: siteColor(vam-grey-2);
      overflow: hidden;
      padding-right: 5px;
      position: relative;
      
      @include bpMinXSmall {
        padding-left: 120px;
        padding-right: 0;
      }

      & em {
        font-style: normal;
        font-weight: 700;
      }
    }

    &-image {
      float: right;
      height: 72px;
      object-fit: cover;
      width: 72px;

      @include bpMinXSmall {
        float: left;
        height: 100px;
        margin: 20px 0;
        position: absolute;
        top: 0;
        width: 100px;
      }
    }
  }
}

